fix custom colors on firefox internal pages

--- a/userContent.css
+++ b/userContent.css
@@ -36,6 +36,9 @@
     --color-accent-primary: var(--custom-accent-color) !important;
     --color-accent-primary-hover: color-mix(in srgb, white 50%, var(--custom-accent-color, #0a84ff)) !important;
     --color-accent-primary-active: var(--custom-accent-color) !important;
+    --brand-color-accent: var(--custom-accent-color) !important;
+    --brand-color-accent-hover: color-mix(in srgb, white 50%, var(--custom-accent-color, #0a84ff)) !important;
+    --brand-color-accent-active: var(--custom-accent-color) !important;
   }
 }
 
